# PiGUIAuto

./: .gitmodules  README.md
PiGUIAuto/: .gitignore  BottomBar.qml  CMakeLists.txt  Main.qml  RPM.cpp  RPM.h  RPM.qml  SettingsPage.qml  TopBar.qml  main.cpp  simulinkmodelwrapper.cpp  simulinkmodelwrapper.h  slider_module.qml
PiGUIAuto/Controllers/: APKBinder.cpp  APKBinder.h  system.cpp  system.h
PiGUIAuto/MATLAB/: Test2  Test2.dwarf  Test2.slx  Test2.slxc  Test2_param.sldd
PiGUIAuto/MATLAB/ClusterControl/: ClusterControl  ClusterControl.sldd  ClusterControl.slx  ClusterControl.slxc  ClusterLibrary.sldd  ClusterLibrary.slx  SDOF_Test.slx  Single_Degree_of_Freedom  Single_Degree_of_Freedom.slx  Single_Degree_of_Freedom.slxc  Single_Degree_of_Freedom_msf.mexmaca64  sdof_test.slxc
PiGUIAuto/MATLAB/ClusterControl/ClusterControl_ert_rtw/: ClusterControl.cpp  ClusterControl.h  ClusterControl_data.cpp  ClusterControl_private.h  ClusterControl_types.h  buildInfo.mat  codeInfo.mat  codedescriptor.dmr  ert_main.cpp  profilingTraceability.mat  rtw_proj.tmw
PiGUIAuto/MATLAB/ClusterControl/ClusterControl_ert_rtw/html/data/: data.js  model.js  pages.js
PiGUIAuto/MATLAB/ClusterControl/ClusterControl_ert_rtw/html/pages/: ClusterControl_coderassumptions.html  ClusterControl_interface.html  ClusterControl_replacements.html  ClusterControl_subsystems.html  ClusterControl_survey.html  ClusterControl_trace.html
PiGUIAuto/MATLAB/ClusterControl/ClusterControl_ert_rtw/instrumented/: ClusterControl.cpp  ClusterControl.h  ClusterControl.mk  ClusterControl_data.cpp  ClusterControl_private.h  ClusterControl_types.h  buildInfo.mat  coder_profile_timer.cpp  coder_profile_timer.h  compileInfo.mat  ert_main.cpp  instrumentationInfo.mat  profiling_info.mat  rtw_proj.tmw
PiGUIAuto/MATLAB/ClusterControl/ClusterControl_ert_rtw/tmwinternal/: simulink_cache.xml  tr
PiGUIAuto/MATLAB/ClusterControl/SDOF_Test_grt_rtw/: SDOF_Test.c  SDOF_Test.h  SDOF_Test_private.h  SDOF_Test_types.h  buildInfo.mat  builtin_typeid_types.h  codeInfo.mat  codedescriptor.dmr  multiword_types.h  rtGetInf.c  rtGetInf.h  rtGetNaN.c  rtGetNaN.h  rt_nonfinite.c  rt_nonfinite.h  rtmodel.h  rtw_proj.tmw  rtwtypes.h  rtwtypeschksum.mat
PiGUIAuto/MATLAB/ClusterControl/Single_Degree_of_Freedom_ert_rtw/: Single_Degree_of_Freedom.cpp  Single_Degree_of_Freedom.h  buildInfo.mat  codeInfo.mat  codedescriptor.dmr  profilingTraceability.mat  rtw_proj.tmw
PiGUIAuto/MATLAB/ClusterControl/Single_Degree_of_Freedom_ert_rtw/html/data/: data.js  pages.js
PiGUIAuto/MATLAB/ClusterControl/Single_Degree_of_Freedom_ert_rtw/html/pages/: Single_Degree_of_Freedom_interface.html  Single_Degree_of_Freedom_replacements.html  Single_Degree_of_Freedom_subsystems.html  Single_Degree_of_Freedom_survey.html  Single_Degree_of_Freedom_trace.html
PiGUIAuto/MATLAB/ClusterControl/Single_Degree_of_Freedom_ert_rtw/instrumented/: Single_Degree_of_Freedom.mk  Single_Degree_of_Freedom_data.cpp  Single_Degree_of_Freedom_private.h  Single_Degree_of_Freedom_types.h  buildInfo.mat  compileInfo.mat  ert_main.cpp  instrumentationInfo.mat  profiling_info.mat  rtw_proj.tmw
PiGUIAuto/MATLAB/ClusterControl/Single_Degree_of_Freedom_ert_rtw/tmwinternal/: simulink_cache.xml  tr
PiGUIAuto/MATLAB/ClusterControl/resources/project/root/: GiiBklLgTxteCEmomM8RCvWT0nQd.xml
PiGUIAuto/MATLAB/ClusterControl/test/: sdof_test.slx
PiGUIAuto/MATLAB/Test2_ert_rtw/: Test2.cpp  Test2.h  Test2.mk  Test2_data.cpp  Test2_private.h  Test2_types.h  buildInfo.mat  codeInfo.mat  codedescriptor.dmr  compileInfo.mat  ert_main.cpp  rtw_proj.tmw
PiGUIAuto/MATLAB/Test2_ert_rtw/html/data/: data.js  model.js  pages.js
PiGUIAuto/MATLAB/Test2_ert_rtw/html/lib/: bundle.index.js
PiGUIAuto/MATLAB/Test2_ert_rtw/html/pages/: Test2_coderassumptions.html  Test2_interface.html  Test2_replacements.html  Test2_subsystems.html  Test2_survey.html  Test2_trace.html
PiGUIAuto/MATLAB/Test2_ert_rtw/tmwinternal/: simulink_cache.xml  tr
PiGUIAuto/MATLAB/resources/project/EEtUlUb-dLAdf0KpMVivaUlztwA/: bgRP89iJsCTjMHSOr2aeUyAMBX8p.xml
PiGUIAuto/MATLAB/resources/project/KAXfQgCar2Yb8zOxgvf9hdmLP1E/: ycMuWAa1_AkRjBUxzD4ozuwYB0Ed.xml  ycMuWAa1_AkRjBUxzD4ozuwYB0Ep.xml
PiGUIAuto/MATLAB/resources/project/qaw0eS1zuuY1ar9TdPn1GMfrjbQ/: Zzn1PB3bdP58Tfp1vPIGdAE8rbwp.xml  emoPyZ19CKCWdTW5LgJbfpmbf6wp.xml
PiGUIAuto/MATLAB/resources/project/root/: GiiBklLgTxteCEmomM8RCvWT0nQd.xml
PiGUIAuto/MATLAB/slprj/ert/_sharedutils/: checksummap.mat  rtwtypes.h  rtwtypeschksum.mat  shared_file.dmr
PiGUIAuto/android/: AndroidManifest.xml
PiGUIAuto/android/src/: QtAndroidService.java
(+159 files in other folders)
